fixed overlap at smaller screens

--- a/styles.css
+++ b/styles.css
@@ -237,6 +237,30 @@ footer .social-icons a img:hover {
 
 @media (max-width: 768px) {
 
+  .feature-box {
+    padding: 16px;
+
+  }
+
+  .feature,
+  .feature.reverse {
+    grid-template-columns: 1fr;
+    gap: 1rem;
+  }
+
+  .circle-icon {
+    width: 100px;
+    height: 100px;
+    font-size: 60px;
+
+  }
+
+  .feature-section {
+    padding: 40px 5%;
+
+
+  }
+
   .navbar {
     flex-direction: column;
     align-items: center;
